<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeaconsMapActivity" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:background="@drawable/roundbutton"
        android:id="@+id/show_hints"
        android:src="@android:drawable/ic_menu_view"
        android:contentDescription="@string/showHints"
        android:onClick="onShowHints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:alpha="0.65"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/showStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSand"
        android:text="@string/step"
        android:layout_margin="10dp"
        android:alpha="0.75"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:background="@drawable/roundbutton"
        android:src="@android:drawable/ic_menu_recent_history"
        android:contentDescription="@string/showBeacons"
        android:onClick="onShowBeacons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:alpha="0.65"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:background="@drawable/roundbutton"
        android:id="@+id/showProximity"
        android:src="@android:drawable/ic_menu_rotate"
        android:contentDescription="@string/indicator"
        android:onClick="onSearchProximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:alpha="0.65"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:background="@drawable/roundbutton"
        android:src="@android:drawable/ic_menu_mylocation"
        android:contentDescription="@string/location"
        android:onClick="onLocateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:alpha="0.65"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
