<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbackground"
    tools:context="ch.heia.mobiledev.treasurehunt.NavigationHomeActivity"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="top"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="6"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp" >

        <ImageView
            android:src="@drawable/detective"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:layout_gravity="top"
            android:contentDescription="@string/logoDescription"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp" >

        <Button
            android:onClick="onNewGame"
            android:text="@string/newgame"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_gravity="bottom" />

        <Button
            android:onClick="onLoadGame"
            android:id="@+id/load_game_bt"
            android:text="@string/loadgame"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp" />

        <Button
            android:onClick="onReadAbout"
            android:text="@string/about"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom"/>
    </LinearLayout>
</LinearLayout>